feat: rework registration
