# backend/src/routes/v1/auth/index.ts
@@ -8,7 +8,7 @@ const router = Router();
 
 router.post("/login", validate(authValidation.login), authController.login);
 router.post("/logout", auth, authController.logout);
-// router.post("/register", authController.register);
+router.post("/register", validate(authValidation.register), authController.register);
 router.post("/refresh", auth, authController.refreshTokens);
 
 export default router;
